- 04: Issue #67: Export option "generate line numbers" was made BASIC-specific <2> 
- 04: Enh. #953: LaTeX algorithm/pseudocode export (4 packages) [Karl-Heinz Becker]2
- 04: Bugfix #974: Two defects on Processing definition import (one severe) <2>
- 04: Bugfix #975: StrukTeX export didn't cope well with backslashes in literals <2>

Version: 3.31 (2021-03-01)
- 01: Bugfix #759: Dried up another source of stale Mainforms. <2>
- 01: Bugfix #761: Code preview defect flooded the log stream. <2>
- 01: Precautions against empty error messages on startup <2>
- 01: Bugfix #705: Find&Replace: Flawed traversal in CASE/PARALLEL branches <2>
- 01: Bugfix #763: Stale file precautions on loading / saving arrangements <2>
- 01: Bugfix #764: Group modifications failed to update the associated .arr file <2>
- 01: Bugfix #765: KSH export of diagrams using record types failed with error <2>
- 01: Deprecated ANSI-C73 import disabled (ANSI-C99 parser subsumes it) <2>
- 02: Bugfix #752: Incomplete declarations in C, Java etc. no longer outcommented <2>
- 02: Issue #766: Deterministic order of subroutines on code export <2>
- 02: Bugfix #769: Commas in string literals compromised CASE branch selection <2>
- 02: Enh. #770: New Analyser checks for CASE elements (selector consistency) <2>
- 02: Bugfix #771: Unhandled syntax errors during execution (e.g. type names) <2>
- 02: Bugfix #772: Possible NullPointerException averting Pascal code preview <2>
- 02: Bugfix #773: Export of declarations to Oberon, Pascal [K.-P. Reimers]2
- 03: Enh. #388: Support for constants on Perl export (had been missing) <2>
- 03: Enh. #423: Support for record types on Perl export (had been missing) <2>
- 03: Enh. #739: Enum type definitions introduced (incl. C99, Pascal import) <2>
- 03: Issue #766: Deterministic export order had not worked for deep hierarchies <2>
- 03: Bugfix #770: Not all CASE selectors were checked to be constant integers <2>